# SimpleVulkanRenderer

./: .gitignore  CMakeLists.txt  SimpleRenderer.sln  comple_shaders.sh
SimpleRenderer/: Allocator.cpp  Allocator.h  RendererException.h  SDLSubsystem.cpp  SDLSubsystem.h  SimpleRenderer.vcxproj  SimpleRenderer.vcxproj.filters  VulkanRenderer.cpp  VulkanRenderer.h  WindowSubsystem.h  WindowSubsystemException.h  main.cpp
src/: Allocator.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  ModelException.h  Pipeline.cpp  Pipeline.h  SDLSubsystem.cpp  SDLSubsystem.h  SceneObject.h  VulkanRenderer.cpp  VulkanRenderer.h  WindowSubsystem.h  main.cpp
src/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
